--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,9 @@ dependencies:
   cupertino_icons: ^1.0.2
   table_sticky_headers: ^2.0.0
   provider: ^5.0.0
+  path_provider: ^2.0.2
+  permission_handler: ^8.1.2
+  excel: ^1.1.5
 
 dev_dependencies:
   flutter_test:
