--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
   provider: ^5.0.0
   path_provider: ^2.0.2
   permission_handler: ^8.1.2
-  excel: ^1.1.5
+  excel: ^2.0.0-null-safety-3
 
 dev_dependencies:
   flutter_test:
