--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   path_provider: ^2.0.2
   permission_handler: ^8.1.2
   excel: ^2.0.0-null-safety-3
+  flutter_colorpicker: ^0.5.0
 
 dev_dependencies:
   flutter_test:
